# glass-lint

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEBASE_READABILITY_AUDIT.md  CONTRIBUTING.md  Cargo.toml  MATCHER_API_DESIGN.md  Makefile  P0-implementation-plan.md  README.md  SECURITY.md  TESTING.md  cli-plan.md  plan.md  rf-plan.md  rule_refactor.md  rules_checklist.md  rustfmt.toml
.github/workflows/: ci.yml
adapters/eslint-obsidianmd/: README.md  adapter.mjs  adapter.ts  package.json
glass-lint-cli/: ARCHITECTURE.md  Cargo.toml  README.md  debug-trace.toml  no-evidence.toml
glass-lint-cli/src/: args.rs  bin.rs  config.rs  lib.rs  lint.rs  output.rs
glass-lint-core/: ARCHITECTURE.md  Cargo.toml  README.md  strengthening.md
glass-lint-core/benches/: core.rs
glass-lint-core/src/: budget.rs  config.rs  diagnostic.rs  environment.rs  fingerprint.rs  lib.rs  limits.rs  linter.rs  parse.rs  project.rs  report.rs  rule_id.rs  telemetry.rs
glass-lint-core/src/analysis/: budget.rs  constant.rs  evidence.rs  evidence_index.rs  fact_builder.rs  facts.rs  flow_calls.rs  flow_index.rs  flow_state.rs  local.rs  lowering.rs  mod.rs  module.rs  name.rs  object_flow.rs  resolution.rs  status.rs  summary.rs
glass-lint-core/src/analysis/facts/: mod.rs  model.rs  stream.rs
glass-lint-core/src/analysis/flow/: cross.rs  effect.rs  index.rs  matcher.rs  mod.rs  plan.rs  requirements.rs  state.rs  summary.rs  table.rs
glass-lint-core/src/analysis/flow/cross/: mod.rs  propagation.rs
glass-lint-core/src/analysis/flow/projector/: control.rs  evidence.rs  mod.rs  state.rs  transfer.rs
glass-lint-core/src/analysis/matching/: arguments.rs  build.rs  mod.rs  occurrence.rs  query.rs
glass-lint-core/src/analysis/project/: exports.rs  graph.rs  identities.rs  linker.rs  mod.rs  model.rs  projection.rs  state.rs
glass-lint-core/src/analysis/resolution/: call.rs  constant.rs  expression.rs  mod.rs
glass-lint-core/src/analysis/scope/: aliases.rs  collector.rs  constants.rs  member.rs  mod.rs  model.rs  provenance_const.rs
glass-lint-core/src/analysis/scope/collect/: aliases.rs  analysis.rs  bindings.rs  callbacks.rs  constants.rs  history.rs  mod.rs  plan.rs  predeclare.rs  projection.rs  provenance.rs  tests.rs  traversal.rs  visitor.rs
glass-lint-core/src/analysis/scope/collector/: constants.rs  predeclare.rs
glass-lint-core/src/analysis/scope/query/: bindings.rs  constants.rs  functions.rs  mod.rs  provenance.rs  rooted.rs
glass-lint-core/src/analysis/syntax/: constant.rs  mod.rs  names.rs  provenance.rs
glass-lint-core/src/analysis/value/: arena.rs  identity.rs  mod.rs  path.rs
glass-lint-core/src/api/: classification.rs  classifier.rs  compiler.rs  mod.rs
glass-lint-core/src/api/classifier/: classify.rs  mod.rs
glass-lint-core/src/api/compiler/: catalog.rs  lowering.rs  mod.rs  object_flow.rs  rule.rs
glass-lint-core/src/api/rule/: decl.rs  error.rs  mod.rs  module.rs  normalization.rs  taxonomy.rs  validation.rs
glass-lint-core/src/api/rule/matcher/: call.rs  derived.rs  flow.rs  member.rs  mod.rs
glass-lint-core/src/lint/: catalog.rs  engine.rs  findings.rs  linter.rs  mod.rs  ranges.rs  report.rs  selection.rs
glass-lint-core/src/matcher/: minified_tests.rs  mod.rs  result.rs
glass-lint-core/src/matcher/rule/: error.rs  matcher.rs  mod.rs  taxonomy.rs  validation.rs
glass-lint-core/src/matcher/semantic/: ast.rs  call.rs  call_arguments.rs  calls.rs  constant.rs  constructors.rs  events.rs  fact_builder.rs  facts.rs  flow_calls.rs  flow_index.rs  flow_state.rs  index.rs  instance.rs  mod.rs  object_flow.rs  resolver.rs  summary.rs  value.rs
glass-lint-core/src/matcher/semantic/scope/: collector.rs  collector_helpers.rs  member.rs  mod.rs  rooted.rs
glass-lint-core/src/matcher/semantic/scope/collector/: callbacks.rs
glass-lint-core/src/matcher/symbol_index/: ast.rs  mod.rs  value_flow.rs  visitor.rs
glass-lint-core/src/matcher/symbol_index/alias/: collector.rs  mod.rs
glass-lint-core/src/project/: input.rs  mod.rs  report.rs  session.rs  tables.rs  tests.rs  types.rs
glass-lint-core/src/project/report/: mod.rs  tests.rs
glass-lint-core/src/project/session/: artifacts.rs  execution.rs  mod.rs
glass-lint-core/src/project/tests/: cache_and_session.rs  input_validation.rs  linking_and_flow.rs  session_and_link_validation.rs  status_policy.rs  support.rs
glass-lint-core/src/project/types/: input.rs  mod.rs  report.rs
glass-lint-core/tests/: compact_source.rs  declarative_matching.rs  linter.rs  matcher_behavior.rs  matcher_targets.rs  minified_matchers.rs  public_surface.rs  report_pretty.rs  review_regressions.rs  scope_precision.rs  semantic_matching.rs  typescript_input.rs
glass-lint-core/tests/compact_source/: constructors.rs
glass-lint-core/tests/declarative_matching/: flow.rs
glass-lint-core/tests/support/: mod.rs
glass-lint-datastructures/: ARCHITECTURE.md  Cargo.toml
glass-lint-datastructures/src/: budget.rs  diagnostic.rs  fingerprint.rs  lib.rs  name.rs  path.rs  path_trie.rs  table.rs
glass-lint-harness/: ARCHITECTURE.md  Cargo.toml  README.md
glass-lint-harness-cli/: ARCHITECTURE.md  Cargo.toml  README.md
glass-lint-harness-cli/src/: args.rs  bin.rs  compare.rs  lib.rs  profile.rs
glass-lint-harness/src/: adapters.rs  builtins.rs  cases.rs  lib.rs  profile.rs  profile_manifest.rs  report.rs  runner.rs  test_support.rs  types.rs
glass-lint-harness/src/profile/: config.rs  corpus.rs  metrics.rs  mod.rs  runner.rs  types.rs
glass-lint-js/: ARCHITECTURE.md  Cargo.toml  README.md
glass-lint-js/src/: disclosures.rs  lib.rs
glass-lint-obsidian/: ACCURACY.md  ARCHITECTURE.md  Cargo.toml  README.md
glass-lint-obsidian/src/: lib.rs
glass-lint-project/: ARCHITECTURE.md  Cargo.toml  README.md
glass-lint-project/src/: admission.rs  budget.rs  corpus.rs  discovery.rs  error.rs  lib.rs  loader.rs  options.rs  resolver.rs  tests.rs  tsconfig.rs  walk.rs
glass-lint-project/src/tsconfig/: mod.rs  tests.rs
reports/: COMPARISON.md
tests/: BUGS.md
tests/e2e/: count-note-words.js  create-meeting-note.js  (+10 more)
(+408 files in other folders)
