[workspace]
members = [
    "glass-lint-core",
    "glass-lint-obsidian",
    "glass-lint-js",
    "glass-lint-harness",
    "glass-lint-cli",
]
resolver = "2"

[profile.release]

[profile.profiling]
inherits = "release"
debug = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.5"
regex = "1.11.1"
swc_common = "23.0.0"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = "41.0.0"
swc_ecma_visit = "25.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"