[workspace]
members = [
    "glass-lint-core",
    "glass-lint-obsidian",
    "glass-lint-js",
    "glass-lint-harness",
    "glass-lint-cli",
    "glass-lint-project",
    "glass-lint-harness-cli",
]
resolver = "2"

[profile.release]

[profile.profiling]
inherits = "release"
debug = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.16.4"
glob = "0.3.3"
json-strip-comments = "=3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.5"
swc_common = "23.0.0"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = { version = "41.0.0", features = ["typescript"] }
swc_ecma_transforms_base = "44.0.0"
swc_ecma_transforms_typescript = "50.0.0"
swc_ecma_visit = "25.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter", "registry"] }
oxc_resolver = "=11.22.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
