[package]
name = "glass-lint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
console.workspace = true
glass-lint-core = { path = "../glass-lint-core", features = ["telemetry"] }
glass-lint-project = { path = "../glass-lint-project" }
glass-lint-obsidian = { path = "../glass-lint-obsidian" }
glass-lint-js = { path = "../glass-lint-js" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true

[lints]
workspace = true

[[bin]]
name = "glass-lint"
path = "src/bin.rs"
