[package]
name = "glass-lint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
console.workspace = true
serde.workspace = true
tracing.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_visit.workspace = true

[features]
default = []
telemetry = ["dep:tracing-subscriber"]

[dependencies.tracing-subscriber]
workspace = true
optional = true

[lints]
workspace = true
