[package]
name = "glass-lint-datastructures"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indexmap.workspace = true
serde = { workspace = true, optional = true }
smol_str.workspace = true
smallvec.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
serde = ["dep:serde", "smol_str/serde"]

[lints]
workspace = true
