[package]
name = "glass-lint-harness-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
console.workspace = true
glass-lint-core = { path = "../glass-lint-core", features = ["telemetry", "serde"] }
glass-lint-harness = { path = "../glass-lint-harness" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[[bin]]
name = "glass-lint-harness"
path = "src/bin.rs"