[package]
name = "glass-lint-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
glass-lint-core = { path = "../glass-lint-core" }
glass-lint-obsidian = { path = "../glass-lint-obsidian" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true

