[package]
name = "glass-lint-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
glass-lint-core = { path = "../glass-lint-core", features = ["serde"] }
glass-lint-datastructures = { path = "../glass-lint-datastructures" }
glass-lint-project = { path = "../glass-lint-project" }
glass-lint-obsidian = { path = "../glass-lint-obsidian" }
glass-lint-js = { path = "../glass-lint-js" }
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
