[package]
name = "glass-lint-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glass-lint-core = { path = "../glass-lint-core" }
glass-lint-datastructures = { path = "../glass-lint-datastructures" }
glob.workspace = true
json-strip-comments.workspace = true
oxc_resolver.workspace = true
serde_json.workspace = true
tracing.workspace = true
walkdir.workspace = true

[lints]
workspace = true
